--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-animate-height": "^3.1.1",
     "react-auth-kit": "^2.10.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
