--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "axios": "^1.2.2",
     "dotenv": "^16.0.3",
     "focus-trap-react": "^10.0.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-animate-height": "^3.1.1",
