--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "mongoose": "^7.0.4"
+    "mongoose": "^7.0.4",
+    "node-cron": "^3.0.2"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
