--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "react-animate-height": "^3.1.1",
     "react-auth-kit": "^2.10.0",
     "react-cookie": "^4.1.1",
-    "react-date-picker": "^10.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-popper": "^2.3.0",
