--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-animate-height": "^3.1.1",
     "react-auth-kit": "^2.10.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
