--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   "devDependencies": {
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
